--- a/css/style.css
+++ b/css/style.css
@@ -58,5 +58,54 @@ body {
 /* Second page */
 
 #counter {
-	font-size: 5em;
+	font-size: 88px;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
+/* Third page */
+
+#name-congra {
+	font-size: 24px;
+}
+
+#show-name {
+	border-bottom: solid 2px #969696;
+	padding-left: 1em;
+	padding-right: 1em;
+	margin-left: 0.5em;
+	margin-right: 0.5em;
+}
+
+#finish-mission {
+	font-size: 18px;
+	height: 160px;
+}
+
+#result-second {
+	font-size: 120px;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+	padding-bottom: 0;
+}
+
+#are-matchmaker {
+	color: red;
+	font-size: 20px;
+}
+
+#back-to-page {
+	font-size: 24px;
+	margin-top: 50px;
+}
+
+#page-link {
+	margin-top: 20px;
+	font-size: 18px;
+}
+
+#FB-img {
+	height: 16px;
+	margin-right: 10px;
+	padding-bottom: 1px;
 }
