Change a better-look image.

--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,8 @@ body {
 	margin-right: 10px;
 	padding-bottom: 1px;
 }
+
+#polka {
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius: 10px;
+}
